--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,700&display=swap");
 $labelBtn: #9ba3ae;
 
@@ -10,3 +10,4 @@ $labelBtn: #9ba3ae;
   color: white;
   font-weight: 200;
 }
+ 
