--- a/src/index.scss
+++ b/src/index.scss
@@ -10,4 +10,10 @@ $labelBtn: #9ba3ae;
   color: white;
   font-weight: 200;
 }
- 
+.pointer {
+  cursor: pointer;
+}
+.label {
+  font-size: 0.9em;
+  color: #9ba3ae;
+}
